namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-learner-records-api-uat/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-learner-records-api-uat
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "lrs-microservice-team"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-learner-records-api-notifications-nonprod"
    cloud-platform.justice.gov.uk/application: "Learner Records API"
    cloud-platform.justice.gov.uk/owner: "Data Modelling and Engineering Team: dataengineering@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-learner-records-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-lrs-devs"
